--- a/Trait.html
+++ b/Trait.html
@@ -10,8 +10,8 @@
     </head>
     <body>
                 
-        <a href="screenshots/Uffizi.jpg">
-            <img title="The painter is not simply someone who looks and who sees. Above all, the artist is someone who exposes a personal vision by rendering it visible." src="Screenshots/Uffizi.jpg" onclick="location.href='index.html'" />
+         <a href="screenshots/GeneratorHeaderTitle.png">
+            <img title="Civilization Generator" src="Screenshots/GeneratorHeaderTitle.png" onclick="location.href='index.html'" />
         </a>
 
         <ul>
