--- a/Leader.html
+++ b/Leader.html
@@ -10,10 +10,9 @@
     </head>
     <body>
                 
-        <a href="screenshots/Uffizi.jpg">
-            <img title="The painter is not simply someone who looks and who sees. Above all, the artist is someone who exposes a personal vision by rendering it visible." src="Screenshots/Uffizi.jpg" onclick="location.href='index.html'" />
+         <a href="screenshots/GeneratorHeaderTitle.png">
+            <img title="Civilization Generator" src="Screenshots/GeneratorHeaderTitle.png" onclick="location.href='index.html'" />
         </a>
-
         <ul>
             <li><a href="#home" onclick="location.href='index.html'">Home</a></li>
             <li class="dropdown">
